Fix/7584 qamy orcid visibility settings should not be shown when adding a new email address (#1161)
* fix: hide visibility setting when user click add another email and add validator

see trello card for details

fixes issue 7584

* rm console logs

* fix: styling when there is no visibility setting showned

* 🤖 GITHUB ACTIONS: formatting 🤖

* 🤖 GITHUB ACTIONS: testing languages 🤖

* fix: add option to resend verification email to primary email

see trello card for details

fixes issue 7581

* 🤖 GITHUB ACTIONS: formatting 🤖

* fix: editing unverified primary email functionality

see trello card for details

fixes issue 7579

* 🤖 GITHUB ACTIONS: formatting 🤖

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -102,3 +102,14 @@ mat-form-field {
     padding-bottom: 18px !important;
   }
 }
+
+.only-verified {
+  padding: 0 4px;
+}
+
+.visibility-hidden {
+  justify-content: end !important;
+  button {
+    margin-inline-end: 8px;
+  }
+}
